welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: type mismatch;
 found   : Unit
 required: Int
else{ if (a>9 && a<21){return a}else{if(b>9 && b<21 && b>a){return b}}}
                                     ^